--- a/html_templates/template_project.html
+++ b/html_templates/template_project.html
@@ -10,11 +10,16 @@
             margin:50px 0;
         }}
 
+        table {{
+            clear:both;
+            width:100%;
+        }}
+
         td {{
             border-top: 2px solid #ccc;
         }}
 
-        table#t01 th {{
+        table th {{
             text-align:"center"
             font-weight"bold";
             text-transform: uppercase;
@@ -38,12 +43,7 @@
     </div>
     <div style="width:770px; margin:0 auto; font-family: Helvetica, Arial, sans-serif; font-size: 12px; line-height: 17px;">
         <div style="background:#ee8130; width:100%; padding:15px; margin:10px 0; font-size:20px; line-height:25px;">{title}</div>
-        <table id="t01" cellpadding="7" cellspacing="0" border="0" width="100%" style="clear:both;">
-            <tr>
-                {header}
-            </tr>
             {table}
-        </table>
         For missing/unknown projects, run the Missing Project report over the
         same time period.
     </div>
