--- a/html_templates/template_topoppusage.html
+++ b/html_templates/template_topoppusage.html
@@ -10,11 +10,16 @@
             margin:50px 0;
         }}
 
+        table {{
+            clear:both;
+            width:100%;
+        }}
+
         td {{
             border-top: 2px solid #ccc;
         }}
 
-        table#t01 th {{
+        table th {{
             text-align:"center"
             font-weight"bold";
             letter-spacing:1px;
@@ -39,12 +44,7 @@
             <div style="font-weight:bold; text-transform: uppercase; letter-spacing:1px; font-size:13px; color:#ee8130 width:100%;">
             {summary}
              </div>
-            <table id="t01" cellpadding="7" cellspacing="0" border="0" width="100%" style="clear:both;">
-                <tr>
-                    {header}
-                </tr>
                 {table}
-            </table>
         </div>
     </body>
 </html>
